--- a/packages/notro/src/components/Code.astro
+++ b/packages/notro/src/components/Code.astro
@@ -1,4 +1,5 @@
 ---
+import { Code } from "astro:components";
 import type { CodeBlockObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 interface Props {
   block: CodeBlockObjectResponse;
@@ -7,6 +8,10 @@ interface Props {
 const { block } = Astro.props;
 ---
 
-<code id={block.id} class="notion-selectable notion-code-block">
+<Code
+  id={block.id}
+  class="notion-selectable notion-code-block"
+  lang={block.code.language}
+>
   {block.code.rich_text[0].plain_text}
-</code>
+</Code>
