Refactor: Updated class splitting logic in CalloutOrCustomContainer component

--- a/packages/notro/src/components/CalloutOrCustomContainer.astro
+++ b/packages/notro/src/components/CalloutOrCustomContainer.astro
@@ -13,7 +13,8 @@ const isCustomContainer =
   block.callout.icon.emoji === "⚙";
 const classes = block.callout.rich_text[0]?.plain_text
   .replace(/\r?\n/g, "")
-  .split("&");
+  .split("&")
+  .map((className) => className.trim());
 ---
 
 {
