--- a/apps/notro-tail/src/assets/styles/tailwind.css
+++ b/apps/notro-tail/src/assets/styles/tailwind.css
@@ -2,10 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Notro classed block styles sample*/
+@layer utilities {
+    .hero {
+        @apply mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center;
+        .container {
+            @apply mx-auto max-w-xl text-center;
+        }
+    }
+
+    .button {
+        p {
+            @apply mt-8 flex flex-wrap justify-center gap-4;
+        }
+        a {
+            @apply block w-full rounded border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-white focus:outline-none focus:ring active:text-opacity-75 sm:w-auto;
+        }
+    }
+
+    .features {
+        @apply grid grid-cols-2 gap-4 sm:grid-cols-3;
+        summary * {
+            @apply text-lg;
+        }
+        details {
+            @apply block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring;
+        }
+    }
+}
+
 /* NotroTail*/
 @layer utilities {
     header {
-        @apply bg-white mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8;
+        @apply mx-auto flex h-16 max-w-screen-xl items-center gap-8 bg-white px-4 sm:px-6 lg:px-8;
         nav {
             /*@apply hidden md:block;*/
         }
@@ -17,47 +46,15 @@
         }
     }
 
-    /*https://www.hyperui.dev/components/marketing/footers#component-4*/
-    @layer utilities {
-        footer {
-            div {
-                @apply mx-auto max-w-screen-xl bg-white px-4 pb-8 pt-16 sm:px-6 lg:px-8 lg:pt-24 mt-16 border-t border-gray-100 pt-8 sm:flex sm:items-center sm:justify-between lg:mt-24;
-                ul {
-                    @apply flex flex-wrap justify-center gap-4 text-xs lg:justify-end;
-                    li a {
-                        @apply text-gray-500 transition hover:opacity-75;
-                    }
+    footer {
+        div {
+            @apply mx-auto mt-16 max-w-screen-xl border-t border-gray-100 bg-white px-4 pb-8 pt-16 pt-8 sm:flex sm:items-center sm:justify-between sm:px-6 lg:mt-24 lg:px-8 lg:pt-24;
+            ul {
+                @apply flex flex-wrap justify-center gap-4 text-xs lg:justify-end;
+                li a {
+                    @apply text-gray-500 transition hover:opacity-75;
                 }
             }
-        }
-    }
-
-
-    main {
-        @apply container mx-auto p-4;
-    }
-}
-
-/* Notro classed block styles*/
-@layer utilities {
-    .notion-custom-container {
-        > h1 {
-            @apply text-2xl;
-        }
-        > p {
-            @apply py-2 px-4 bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg;
-        }
-    }
-    .notion-custom-card {
-        @apply bg-white shadow-md rounded-lg p-4;
-        > div {
-            @apply p-4;
-        }
-        > h1 {
-            @apply text-xl font-medium text-gray-900;
-        }
-        > p {
-            @apply mt-1 text-gray-500;
         }
     }
 }
@@ -86,15 +83,15 @@
     }
 
     .notion-bookmark-block {
-        @apply underline text-blue-500;
+        @apply text-blue-500 underline;
     }
 
     .notion-bulleted_list-block {
-        @apply list-disc list-inside;
+        @apply list-inside list-disc;
     }
 
     .notion-numbered_list-block {
-        @apply list-decimal list-inside;
+        @apply list-inside list-decimal;
     }
 
     .notion-column_list-block {
@@ -106,11 +103,11 @@
     }
 
     .notion-code-block {
-        @apply bg-gray-100 my-1;
+        @apply my-1 bg-gray-100;
     }
 
     .notion-quote-block {
-        @apply bg-gray-100 my-1 p-4;
+        @apply my-1 bg-gray-100 p-4;
     }
 
     .notion-callout-block {
@@ -118,7 +115,9 @@
     }
 
     .notion-toggle-block {
-        h1,h2,h3 {
+        h1,
+        h2,
+        h3 {
             @apply inline-block;
         }
     }
@@ -173,39 +172,39 @@
     }
 
     .notion-color-gray_background {
-        @apply bg-gray-200 my-1;
+        @apply my-1 bg-gray-200;
     }
 
     .notion-color-brown_background {
-        @apply bg-amber-200 my-1;
+        @apply my-1 bg-amber-200;
     }
 
     .notion-color-orange_background {
-        @apply bg-orange-200 my-1;
+        @apply my-1 bg-orange-200;
     }
 
     .notion-color-yellow_background {
-        @apply bg-yellow-200 my-1;
+        @apply my-1 bg-yellow-200;
     }
 
     .notion-color-green_background {
-        @apply bg-green-200 my-1;
+        @apply my-1 bg-green-200;
     }
 
     .notion-color-blue_background {
-        @apply bg-blue-200 my-1;
+        @apply my-1 bg-blue-200;
     }
 
     .notion-color-purple_background {
-        @apply bg-purple-200 my-1;
+        @apply my-1 bg-purple-200;
     }
 
     .notion-color-pink_background {
-        @apply bg-pink-200 my-1;
+        @apply my-1 bg-pink-200;
     }
 
     .notion-color-red_background {
-        @apply bg-red-200 my-1;
+        @apply my-1 bg-red-200;
     }
 
     /* Notion annotations */
@@ -222,7 +221,7 @@
         @apply underline;
     }
     .notion-annotation-code {
-        @apply font-mono bg-gray-200;
+        @apply bg-gray-200 font-mono;
     }
 
     .notion-link {
