--- a/apps/notro-tail/src/assets/styles/tailwind.css
+++ b/apps/notro-tail/src/assets/styles/tailwind.css
@@ -33,6 +33,10 @@
 
 /* NotroTail*/
 @layer utilities {
+    main {
+        @apply mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8;
+    }
+
     header {
         @apply mx-auto flex h-16 max-w-screen-xl items-center gap-8 bg-white px-4 sm:px-6 lg:px-8;
         nav {
@@ -71,15 +75,15 @@
     }
 
     .notion-header-block {
-        @apply text-3xl font-bold text-gray-900;
+        @apply text-3xl font-bold text-gray-900 mt-8 mb-1;
     }
 
     .notion-sub_header-block {
-        @apply text-2xl font-bold text-gray-900;
+        @apply text-2xl font-bold text-gray-900 mt-6 mb-px;
     }
 
     .notion-sub_sub_header-block {
-        @apply text-xl font-bold text-gray-900;
+        @apply text-xl font-bold text-gray-900 mt-4 mb-px;
     }
 
     .notion-bookmark-block {
@@ -103,15 +107,15 @@
     }
 
     .notion-code-block {
-        @apply my-1 bg-gray-100;
+        @apply mt-1 mb-1 bg-gray-100;
     }
 
     .notion-quote-block {
-        @apply my-1 bg-gray-100 p-4;
+        @apply mt-1 mb-1 bg-gray-100 p-4;
     }
 
     .notion-callout-block {
-        @apply my-1 rounded-md bg-gray-100 p-4 pr-3;
+        @apply mt-1 mb-1 rounded-md bg-gray-100 p-4 pr-3;
     }
 
     .notion-toggle-block {
@@ -225,7 +229,7 @@
     }
 
     .notion-link {
-        @apply text-blue-500 underline;
+        @apply text-gray-500 underline;
     }
 
     .notion-alias-block {
