Allow ChildDatabase filter and sort to be specified (#34)
#17 Filter and sorts properties for fetching database pages.

--- a/packages/notro/src/components/Database.astro
+++ b/packages/notro/src/components/Database.astro
@@ -5,7 +5,10 @@ import {
 } from "../utils/notion/getPageTree";
 import type { ChildDatabaseBlockObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 import { queryNotionDatabasePageAll } from "../utils/notion/api/databases";
-import { toPage, isPublicPage } from "../utils/notion/utils";
+import { toPage } from "../utils/notion/utils";
+import options from "virtual:notro-options";
+import DatabaseProperties from "./DatabaseProperties.astro";
+
 interface Props {
   block: ChildDatabaseBlockObjectResponse;
 }
@@ -18,16 +21,11 @@ const ancestors = getPathFromAncestorPages(
 
 const pages = await queryNotionDatabasePageAll({
   database_id: block.id,
-  sorts: [
-    {
-      timestamp: "last_edited_time",
-      direction: "descending",
-    },
-  ],
+  filter: options.queryChildDatabaseParameters.filter,
+  sorts: options.queryChildDatabaseParameters.sorts,
 });
-const databasePages = pages
-  .map((page) => toPage(page, ancestors))
-  .filter(isPublicPage);
+
+const databasePages = pages.map((page) => toPage(page, ancestors));
 ---
 
 <div id={block.id} class=`notion-selectable notion-collection_view-block`>
@@ -37,6 +35,7 @@ const databasePages = pages
         return (
           <li id={page.id}>
             <a href={page.path + page.slug}>{page.title}</a>
+            <DatabaseProperties properties={page.properties} />
           </li>
         );
       })
