--- a/apps/notro-tail/src/pages/[collection]/[slug].astro
+++ b/apps/notro-tail/src/pages/[collection]/[slug].astro
@@ -2,6 +2,8 @@
 import { getStaticPathsForTemplateContents } from "../../utils/templateContents";
 import type { PageObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 import BlockRenderer from "notro/src/components/BlockRenderer.astro";
+import DatabaseCover from "notro/src/components/DatabaseCover.astro";
+import DatabaseProperties from "notro/src/components/DatabaseProperties.astro";
 import Layout from "../../layouts/Layout.astro";
 
 interface Props {
@@ -18,6 +20,10 @@ const { title, page } = Astro.props;
 
 <Layout title={title}>
   <main>
+    <div class="notion-collection-item" id={page.id}>
+      <DatabaseCover cover={page.cover} alt={title} />
+      <DatabaseProperties page={page} />
+    </div>
     <BlockRenderer param={{ block_id: page.id }} />
   </main>
 </Layout>
