--- a/packages/notro/src/components/DatabaseProperty.astro
+++ b/packages/notro/src/components/DatabaseProperty.astro
@@ -2,18 +2,34 @@
 import type { PageObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 import RichText from "./RichText.astro";
 import * as console from "node:console";
+import { Page } from "../utils/notion/utils";
 
 interface Props {
   name: string;
   property: PageObjectResponse["properties"][1];
+  page: Page;
 }
 
-const { name, property } = Astro.props;
+const { name, property, page } = Astro.props;
 ---
 
 {
   (() => {
     switch (property.type) {
+      case "title":
+        return (
+          property.title && (
+            <a href={page.path + page.slug}>
+              <h3
+                class="notion-property-title"
+                data-property-id={property.id}
+                data-property-name={name}
+              >
+                <RichText richText={property.title} />
+              </h3>
+            </a>
+          )
+        );
       case "rich_text":
         return (
           property.rich_text && (
@@ -80,7 +96,6 @@ const { name, property } = Astro.props;
       case "relation":
       case "rollup":
       case "status":
-      case "title":
       case "unique_id":
       case "url":
       case "verification":
