--- a/packages/notro/src/components/DatabaseProperties.astro
+++ b/packages/notro/src/components/DatabaseProperties.astro
@@ -2,7 +2,7 @@
 import type { PageObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 import options from "virtual:notro-options";
 import DatabaseProperty from "./DatabaseProperty.astro";
-import { Page } from "../utils/notion/utils";
+import type { Page } from "../utils/notion/utils";
 
 interface Props {
   page: Page;
