--- a/packages/notro/src/components/DatabaseProperty.astro
+++ b/packages/notro/src/components/DatabaseProperty.astro
@@ -2,7 +2,7 @@
 import type { PageObjectResponse } from "@notionhq/client/build/src/api-endpoints";
 import RichText from "./RichText.astro";
 import * as console from "node:console";
-import { Page } from "../utils/notion/utils";
+import type { Page } from "../utils/notion/utils";
 
 interface Props {
   name: string;
