--- a/packages/notro/src/components/DatabaseProperty.astro
+++ b/packages/notro/src/components/DatabaseProperty.astro
@@ -20,11 +20,7 @@ const { name, property, page } = Astro.props;
         return (
           property.title && (
             <a href={page.path + page.slug}>
-              <h3
-                class="notion-property-title"
-                data-property-id={property.id}
-                data-property-name={name}
-              >
+              <h3 class="notion-property-title">
                 <RichText richText={property.title} />
               </h3>
             </a>
@@ -33,11 +29,7 @@ const { name, property, page } = Astro.props;
       case "rich_text":
         return (
           property.rich_text && (
-            <p
-              class="notion-property-text"
-              data-property-id={property.id}
-              data-property-name={name}
-            >
+            <p class="notion-property-text">
               <RichText richText={property.rich_text} />
             </p>
           )
@@ -45,23 +37,13 @@ const { name, property, page } = Astro.props;
       case "select":
         return (
           property.select && (
-            <span
-              class="notion-property-select"
-              data-property-id={property.id}
-              data-property-name={name}
-            >
-              {property.select?.name}
-            </span>
+            <span class="notion-property-select">{property.select?.name}</span>
           )
         );
       case "multi_select":
         return (
           property.multi_select.length > 0 && (
-            <div
-              class="notion-property-multi-select"
-              data-property-id={property.id}
-              data-property-name={name}
-            >
+            <div class="notion-property-multi-select">
               {property.multi_select.map((item) => {
                 return <span class="notion-property-select">{item.name}</span>;
               })}
@@ -71,12 +53,7 @@ const { name, property, page } = Astro.props;
       case "date":
         return (
           property.date && (
-            <time
-              class="notion-property-date"
-              data-property-id={property.id}
-              data-property-name={name}
-              datetime={property.date?.start}
-            >
+            <time class="notion-property-date" datetime={property.date?.start}>
               {property.date?.start}
             </time>
           )
