--- a/apps/notro-tail/src/components/Footer.astro
+++ b/apps/notro-tail/src/components/Footer.astro
@@ -1,21 +1,41 @@
 ---
 import { getPagesByType, PageType } from "../utils/template";
 
+const indexPages = await getPagesByType(PageType.Home);
 const footerPages = await getPagesByType(PageType.Footer);
 ---
 
 {
   footerPages.length > 0 ? (
-    <footer>
-      <div>
-        <ul>
-          {footerPages.map((page) => (
-            <li>
-              <a href={page.slug}>{page.title}</a>
-            </li>
-          ))}
-        </ul>
-      </div>
-    </footer>
+    <>
+      <footer class="bg-white dark:bg-gray-900">
+        <div class="container flex flex-col items-center justify-between px-6 py-8 mx-auto lg:flex-row">
+          {indexPages.length > 0 ? <a href="/">{indexPages[0].title}</a> : null}
+
+          <div class="flex flex-wrap items-center justify-center gap-4 mt-6 lg:gap-6 lg:mt-0">
+            {footerPages.map((page) => (
+              <a
+                href={page.slug}
+                class="text-sm text-gray-600 transition-colors duration-300 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400"
+              >
+                {page.title}
+              </a>
+            ))}
+          </div>
+
+          <p class="mt-6 text-sm text-gray-500 lg:mt-0 dark:text-gray-400">
+            Powered by
+            <a
+              class="hover:underline"
+              href="http://notro.mosugi.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              NotroTail
+            </a>
+          </p>
+        </div>
+      </footer>
+    </>
   ) : null
 }
