feat: Add Favicon component.

--- a/apps/notro-tail/src/components/Header.astro
+++ b/apps/notro-tail/src/components/Header.astro
@@ -13,6 +13,7 @@ const headerPages = await getPagesByType(PageType.Header);
         <div class="flex items-center justify-between">
           {indexPages.length > 0 ? (
             <a href="/">
+              <!-- TODO Add logo -->
               <h1>{indexPages[0].title}</h1>
             </a>) : null}
 
