--- a/packages/notro/src/components/Database.astro
+++ b/packages/notro/src/components/Database.astro
@@ -7,7 +7,7 @@ import type { ChildDatabaseBlockObjectResponse } from "@notionhq/client/build/sr
 import { queryNotionDatabasePageAll } from "../utils/notion/api/databases";
 import { toPage } from "../utils/notion/utils";
 import options from "virtual:notro-options";
-import DatabaseProperties from "./DatabaseProperties.astro";
+import DatabaseItem from "./DatabaseItem.astro";
 
 interface Props {
   block: ChildDatabaseBlockObjectResponse;
@@ -29,16 +29,9 @@ const databasePages = pages.map((page) => toPage(page, ancestors));
 ---
 
 <div id={block.id} class=`notion-selectable notion-collection_view-block`>
-  <ul>
-    {
-      databasePages.map((page) => {
-        return (
-          <li id={page.id}>
-            <a href={page.path + page.slug}>{page.title}</a>
-            <DatabaseProperties properties={page.properties} />
-          </li>
-        );
-      })
-    }
-  </ul>
+  {
+    databasePages.map((page) => {
+      return <DatabaseItem page={page} />;
+    })
+  }
 </div>
